[package]
name = "ruhn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
log = "0.4.19"
env_logger = "0.10.0"
clap-verbosity-flag = "2.0.1"
clap = { version = "4.3.19", features = ["derive"] }
